--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -42,3 +42,86 @@
 .voceDeve {
     color: #f79b0c;
 }
+
+.card-body {
+    background-color: #ECCBAC;
+}
+
+@media (min-width: 768px) {
+    .footer-bar .btn {
+        width: auto;
+        height: auto;
+        font-size: 16px;
+        border-radius: 5px;
+        padding: 10px 20px;
+    }
+
+    .footer-bar .btn i {
+        margin-bottom: 0;
+    }
+
+    .fixed-bottom-btn {
+        width: auto;
+        height: auto;
+        font-size: 16px;
+        border-radius: 5px;
+        padding: 10px 20px;
+    }
+}
+
+.fixed-bottom-btn {
+    width: 70px;
+    height: 70px;
+    font-size: 20px;
+}
+
+.footer-bar .btn i {
+    margin-bottom: 5px;
+    font-size: 20px;
+}
+
+.footer-bar .btn.active {
+    background-color: #007bff;
+    /* Active color */
+}
+
+.footer-bar .btn {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: auto;
+    height: 60px;
+    font-size: 14px;
+
+}
+
+.footer-bar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #ffffff;
+    padding: 10px 0 20px 0px;
+    box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 1000;
+}
+
+.footer-bar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #ffffff;
+    padding: 10px 0 20px 0px;
+    box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 1000;
+    flex-direction: column;
+}
